sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__false22/errors.jtrrouter
Error: Not numerical maxspeed definition in lane '2_1'.
Quitting (on error).
